# hack_emu

./: Bichromia.hack  CMakeLists.txt  README.md  Test.Hack
.cache/clangd/index/: main.cpp.8A45D0F870F1C729.idx
rtl/: ALU.sv  CPU.sv  Computer.sv  Memory.sv  PC.sv  RAM.sv  ROM.sv  Register.sv
sim/: CMakeLists.txt  main.cpp
tb/: ALU.tv  ALU_tb.sv  Bit.tv  Bit_tb.sv  CPU.tv  CPU_tb.sv  PC.tv  PC_tb.sv  RAM16K.tv  RAM16K_tb.sv  RAM64.tv  RAM64_tb.sv  RAM8.tv  RAM8_tb.sv  Register.tv  Register_tb.sv
